--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "root": true,
   "extends": [
-    "eslint:recommended",
+    "airbnb",
     "plugin:import/errors",
     "plugin:import/warnings"
   ],
