--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,5 @@
-root = true
-
-[*]
-indent_style = tab
+[*.{js,jsx,ts,tsx,vue}]
+indent_style = space
 indent_size = 2
-end_of_line = lt
-charset = utf-8
-trim_trailing_whitespaces = true
+trim_trailing_whitespace = true
 insert_final_newline = true
-
-[*.md]
-trim_trailing_whitespaces = false
