--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,7 @@
 {
   "root": true,
   "extends": [
-    "airbnb",
-    "plugin:import/errors",
-    "plugin:import/warnings"
+    "eslint:recommended",
   ],
   "parserOptions": {
     "ecmaVersion": 7,
